Array iteration training

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "software": "GNU GPLv3",
     "content": "CC­BY­NC­SA 4.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "csv": "^1.1.1"
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
